# kafka-group-status-exporter

./: Dockerfile  README.md  pyproject.toml
src/kafka_group_status_exporter/: _main.py  cli.py
