[tool.poetry]
name = "kafka-group-status-exporter"
version = "0.1.0"
description = "Exports all the statuses of the kafka consumer group and all its active members"
authors = ["ermakov-oleg <ermakovolegs@gmail.com>"]
readme = "README.md"


[tool.poetry.scripts]
kafka-group-status-exporter = "kafka_group_status_exporter.cli:cli"

[tool.poetry.dependencies]
python = "^3.12"
prometheus-client = "^0.19"
confluent-kafka = "^2.1"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
